# gdarchive

./: .gitignore  Makefile.toml  README.md
godot/: TestsTheme.tres  project.godot
godot/gdnative/gdarchive/: ZIPPacker.gdns  ZIPReader.gdns  ZIPReaderHarness.gd  ZIPWriter.gdns  ZIPWriterHarness.gd  ZipBufferReader.gdns  gdarchive.gdnlib
godot/scene/: OutputFont.tres  tests.tscn
godot/script/: Tests.gd
godot/script/res/: EditorDynamicFontData.gd
godot/script/tests/: Stopwatch.gd  TestPanelBase.gd  ZIPReader-test.gd  ZIPReaderTest.gd  ZIPWriterTest.gd
rust/: Cargo.toml
rust/src/: archive_reader.rs  lib.rs
rust/src/archive_reader/: archive_read_err.rs  archive_reader.rs  archive_write_err.rs  archive_writer.rs  zip_buffer_reader.rs  zip_file_reader.rs  zip_file_writer.rs
rust/src/gdarchive/: archive.rs  mod.rs  result.rs  util.rs
rust/src/gdarchive/godot/: mod.rs  zip_packer.rs  zip_reader.rs
rust/src/gdarchive/zip/: buffer_reader.rs  file_reader.rs  file_writer.rs  mod.rs  result.rs  zipappend.rs
