[package]
name = "godot_archive_rust"
version = "0.1.0"
authors = ["disco0 <disco0@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
zip = "0.5.13"
gdnative = "0.11.3"
bytes = "1.3.0"
itertools = "0.10.5"
walkdir = "2.3.2"
path-slash = "0.x"

# TODO: rar support
# archive-reader = "0.3"
# unrar = "0.4.4"
